# maifscratch

./: .env.example  .gitignore  BENCHMARK_SUMMARY.md  BUG_FIXES_SUMMARY.md  Dockerfile  GDPR_COMPLIANCE_ASSESSMENT.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  MAIF_AWS_PARITY_ANALYSIS.md  MAIF_README.md  MAIF_Security_Verifications_Table.md  MISSING_FEATURES.md  Makefile  PAINLESS_SETUP.md  README.md  README.tex  README_TECHNICAL.md  README_condensed.tex  SECURITY_IMPLEMENTATION_PLAN.md  SECURITY_SPECIFICATION.md  agent_activity_trace.json  benchmark_results.md  block_access_analysis.py  build_package.py  california_to_nepal_consortium_artifact_manifest.json  coordinator_agent_001_contribution_manifest.json  culture_agent_001_contribution_manifest.json  culture_agent_002_contribution_manifest.json  culture_agent_003_contribution_manifest.json  culture_agent_004_contribution_manifest.json  culture_agent_005_contribution_manifest.json  devils_advocate_001_contribution_manifest.json  docker-compose.yml  earth_to_andromeda_consortium_artifact.maif  earth_to_andromeda_consortium_artifact_manifest.json  geo_agent_001_contribution_manifest.json  geo_agent_002_contribution_manifest.json  geo_agent_003_contribution_manifest.json  geo_agent_004_contribution_manifest.json  geo_agent_005_contribution_manifest.json  (+61 more)
benchmark_results/: benchmark_report.json
benchmarks/: bedrock_swarm_benchmark.py  maif_benchmark_suite.py
cloudformation/: maif-infrastructure.yaml
comprehensive_benchmark_results/: comprehensive_benchmark_report.json
docs/: AWS_INTEGRATION.md  AWS_INTEGRATION_GUIDE.md  AWS_PRODUCTION_CHECKLIST.md  BENCHMARK_SUMMARY.md  INSTALLATION.md  MAIF_FEATURES.md  MAIF_README.md  MAIF_Security_Verifications_Table.md  NOVEL_ALGORITHMS_IMPLEMENTATION.md  PAPER_CODE_ALIGNMENT.md  README.md  SIMPLE_API_GUIDE.md  benchmarks_README.md  deploy.sh  index.md  package-lock.json  package.json  test-mermaid.md
examples/: advanced_features_demo.py  aws_agent_demo.py  aws_agent_with_backends_demo.py  aws_cloudwatch_compliance_demo.py  aws_deployment_demo.py  aws_distributed_demo.py  aws_integrated_agent_demo.py  aws_integration_example.py  aws_kinesis_streaming_demo.py  aws_macie_privacy_demo.py  aws_s3_block_storage_demo.py  aws_secrets_manager_demo.py  aws_stepfunctions_demo.py  aws_xray_agent_demo.py  basic_usage.py  bedrock_swarm_demo.py  demo_streaming_manifest.json  forensic_report.json  maif_sdk_aws_demo.py  multi_agent_consortium_demo.py  novel_algorithms_demo.maif  novel_algorithms_demo.py  novel_algorithms_demo_manifest.json  privacy_demo.py  privacy_demo_manifest.json  quick_multimodal_manifest.json  quick_text_manifest.json  sample_manifest.json  searchable_demo_manifest.json  secure_demo_manifest.json  simple_demo_manifest.json  versioned_doc_manifest.json  versioning_demo.py  versioning_forensic_report.json  video_demo.py
experiment/: MAIF_Complete_Analysis_Report.md  README.md  demo.py  maif_agent.py  maif_benchmark_results.json  maif_core.py  maif_security.py  requirements.txt  test_maif_performance.py
maif/: __init__.py  acid_optimized.py  acid_secure.py  acid_transactions.py  acid_truly_optimized.py  adaptation_rules.py  advanced_security.py  agentic_framework.py  api_gateway_integration.py  aws_bedrock_integration.py  aws_cloudwatch_compliance.py  aws_config.py  aws_credentials.py  aws_decorators.py  aws_deployment.py  aws_distributed_integration.py  aws_dynamodb_integration.py  aws_kinesis_streaming.py  aws_kms_integration.py  aws_lambda_integration.py  aws_macie_privacy.py  aws_s3_block_storage.py  aws_s3_integration.py  aws_secrets_manager_security.py  batch_processor.py  (+59 more)
(+65 files in other folders)
